# C-projects

./: CMakeLists.txt  README.md  lab8.rar
2019/end_2021/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  m.cpp  o.cpp
2019/fx/: a.cpp  b.cpp  d.cpp  e.cpp  f.cpp  g.cpp
2019/q1v1/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp
2019/q2v4/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
2019/q3v3/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  input.txt
2019/q3v4/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  input.txt  t.cpp
2019/q4v1/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
2019/q4v2/: g.cpp  h.cpp  i.cpp  input.txt  j.cpp  t.cpp
2019/q4v3/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
2019/q4v4/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
acmp/: 131.cpp  148.cpp  678.cpp  chekmate.cpp  input.txt  sudoku.cpp
acmp/recursion/: 317.cpp  350.cpp  chinovnik.cpp
codeforces/: a.cpp
easy_life/: 21_06_02.cpp  heart.cpp  input.txt  tax+.cpp  tax.cpp  tax.h
informatics/: CinTest.cpp  a.cpp  a2.cpp  a3.cpp  input.txt
informatics/dp/: b.cpp  c.cpp  d.cpp
informatics/for/: a.cpp  b.cpp  c.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp
informatics/function/: c.cpp  d.cpp  e.cpp  f.cpp
informatics/ifelse/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp
informatics/map/: SortMapByValue.cpp  a.cpp  c.cpp  d.cpp  f.cpp  help.cpp  i.cpp  synonim.cpp
informatics/recursion/: a.cpp  a2.cpp  b.cpp  c.cpp  c2.cpp  d.cpp  d2.cpp  e.cpp  f.cpp
informatics/sets/: a_1.cpp  a_2.cpp  b.cpp  b_1.cpp  b_2.cpp  c.cpp  c_1.cpp  d.cpp  d_1.cpp  e.cpp  e_1.cpp  intersec.cpp  output.txt  set.cpp  union.cpp
informatics/vector/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
marathons/marathon_1/array/: a.cpp  c.cpp  f.cpp  i.cpp  l.cpp
marathons/marathon_1/array2x/: a.cpp  e.cpp  i.cpp  input.txt  l.cpp  n.cpp
marathons/marathon_1/strings/: a.cpp  e.cpp  i.cpp  input.txt  o.cpp  r.cpp
marathons/marathon_1/while/: a.cpp  c.cpp  e.cpp  g.cpp  j.cpp
marathons/marathon_2/: 22.cpp  312.cpp  597.cpp  637.cpp  643.cpp  777.cpp  940.cpp  950.cpp  98.cpp
stepik/: permutation.cpp  shoes.cpp
stepik/func/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
stepik/stl/: c.cpp
summer2021/codewars/: a.py  b.cpp  bin.cpp  c.cpp  d.cpp  d.py  e.cpp  f.cpp  g.py  h.cpp  test.py
summer2021/q1/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  g.cpp  h.cpp  i.cpp  j.cpp
summer2021/q2/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  input.txt  j.cpp  test.cpp  test2.cpp
summer2021/q3/: a.cpp  b.cpp  d.cpp  input.txt  test.cpp
summer2021/yandex/w1/: a.cpp  c.cpp  d.cpp  g.cpp  i.cpp  i2.py  input.txt
summer2021/yandex/w2/: a.py
week 1/: 1.cpp  2.cpp  3.cpp  4.cpp
week 10/: m.cpp
week 10/lab_8/: a.cpp  b.cpp  c.cpp  c2.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp
week 12/: input.txt  o.cpp
week 12/quiz3/: a.cpp  b.cpp  d.cpp  d2.cpp  e.cpp  f.cpp  f2.cpp  g.cpp  g3.cpp  input.txt  output.txt  t.cpp
week 12/quiz3_2/: a.cpp  a2.cpp  b.cpp  c.cpp  c2.cpp  d.cpp  e.cpp  f.cpp  g.cpp  g2.cpp  test.cpp
week 12/upsolve1/: b.cpp
week 13/lab_10/: UniqueVector.cpp  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  e2.cpp  f.cpp  g.cpp  g2.cpp  h.cpp  i.cpp  input.txt  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  pow.cpp  prime.cpp  t.cpp
week 14/: RecDiagonal.cpp  vec.cpp
week 14/lab_11/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  input.txt  j.cpp  t.cpp
week 15/quiz4_1/: a.cpp  b.cpp  c.cpp  c2.cpp  d.cpp  e2.cpp  f.cpp  g.cpp  output.txt  test.cpp
week 15/quiz4_2/: a.cpp  b.cpp  c.cpp  d.cpp  d2.cpp  e.cpp  f.cpp  g.cpp  input.txt
week 16/final/: c.cpp  d.cpp  e.cpp  f.cpp  fibb.cpp  g.cpp  j.cpp  l.cpp  test.cpp
week 2/Informatics/: A.cpp  B.cpp  C.cpp  d.cpp  e.cpp  f.cpp  g.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp
week 2/lab2/: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  L.cpp  M.cpp  N.cpp  O.cpp
week 3/: 1.cpp  2.cpp  input.txt  sort.cpp
week 3/lab_3/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  prime.cpp  square.cpp
week 4/quiz 1/: a.cpp  a1.cpp  b.cpp  c.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  n.cpp  o.cpp
week 4/quiz 2/: a.cpp
week 5/informatics/: a.cpp  b.cpp  input.txt
week 5/lab4/: a.cpp
week 5/lab_4/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  input.txt  j.cpp  k.cpp  l.cpp  n.cpp  o.cpp  p.cpp  q.cpp  spiral.cpp
week 6/lab5/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  p.cpp  q.cpp
week 7/: ReadText.cpp  output.txt
week 7/informatics/: a.cpp  b.cpp
week 7/lab6/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  input.txt  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  p.cpp  q.cpp  r.cpp
week 8/quiz 2/: a.cpp  b.cpp  c.cpp  c2.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  input.txt  j.cpp
week 9/: sum_of_digits.cpp
week 9/lab_7/: Fibb.cpp  Fibb2.cpp  Fibb3.cpp  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  myFibb.cpp  n.cpp  n2.cpp  o.cpp
